# student-backend_pro

./: .gitignore  config.yaml  docker-compose.yaml  package-lock.json  pyproject.toml
app/config/: base.py
app/core/: config.py
app/utils/: log.py  profile.py
studentfonted/: index.html  package-lock.json  package.json
tests/core/: test_config.py
